--- a/main.html
+++ b/main.html
@@ -15,9 +15,14 @@
 		</tr></thead>
 		<tbody>
 		<tr>
-			<td></td>
-			<td></td>
-		</tr></tbody
+			<td>55</td>
+			<td>Ash</td>
+		</tr>
+        <tr>
+			<td>21</td>
+			<td>jack</td>
+		</tr>
+		</tbody>
 				 </table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
